--- a/pom.xml
+++ b/pom.xml
@@ -20,19 +20,20 @@
         </plugins>
     </build>
     <dependencies>
-        <dependencies>
-    <dependency>
-        <groupId>org.eclipse.paho</groupId>
-        <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-        <version>1.2.0</version>
-    </dependency>
-</dependencies>
+        <dependency>
+            <groupId>org.eclipse.paho</groupId>
+            <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+    </dependencies>
 
         <!-- https://mvnrepository.com/artifact/com.hivemq/hivemq-mqtt-client -->
-        <!--<dependency>
+ <!--   <dependencies>
+        <dependency>
             <groupId>com.hivemq</groupId>
             <artifactId>hivemq-mqtt-client</artifactId>
             <version>1.1.3</version>
         </dependency>
-    </dependencies>-->
+    </dependencies>
+-->
 </project>
