--- a/pom.xml
+++ b/pom.xml
@@ -25,10 +25,17 @@
             <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
             <version>1.2.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.json/json -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20190722</version>
+        </dependency>
     </dependencies>
 
-        <!-- https://mvnrepository.com/artifact/com.hivemq/hivemq-mqtt-client -->
- <!--   <dependencies>
+<!-- https://mvnrepository.com/artifact/com.hivemq/hivemq-mqtt-client -->
+<!--
+    <dependencies>
         <dependency>
             <groupId>com.hivemq</groupId>
             <artifactId>hivemq-mqtt-client</artifactId>
