--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
                 <configuration>
                     <archive>
                         <manifest>
-                            <mainClass><de class="lehunt"></de></mainClass>
+                            <addClasspath>true</addClasspath>
+                            <mainClass>de.lehunt.Backend</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -33,11 +34,13 @@
         </plugins>
     </build>
     <dependencies>
+
         <dependency>
             <groupId>org.eclipse.paho</groupId>
             <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
             <version>1.2.0</version>
         </dependency>
+
         <!-- https://mvnrepository.com/artifact/org.json/json -->
         <dependency>
             <groupId>org.json</groupId>
@@ -46,14 +49,4 @@
         </dependency>
     </dependencies>
 
-<!-- https://mvnrepository.com/artifact/com.hivemq/hivemq-mqtt-client -->
-<!--
-    <dependencies>
-        <dependency>
-            <groupId>com.hivemq</groupId>
-            <artifactId>hivemq-mqtt-client</artifactId>
-            <version>1.1.3</version>
-        </dependency>
-    </dependencies>
--->
 </project>
