--- a/pom.xml
+++ b/pom.xml
@@ -34,11 +34,18 @@
         </plugins>
     </build>
     <dependencies>
-
+<!--
         <dependency>
             <groupId>org.eclipse.paho</groupId>
             <artifactId>org.eclipse.paho.client.mqttv3</artifactId>
-            <version>1.2.0</version>
+            <version>1.2.2</version>
+        </dependency>
+-->
+        <!-- https://mvnrepository.com/artifact/com.hivemq/hivemq-mqtt-client -->
+        <dependency>
+            <groupId>com.hivemq</groupId>
+            <artifactId>hivemq-mqtt-client</artifactId>
+            <version>1.1.3</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.json/json -->
